# CursachSQL

./: .gitignore  README.md  pyproject.toml
src/: API.py  config.py  creating_table.py  database.ini  db_manager.py  main.py
